enable_testing()

configure_file(run-test.sh.in run-test.sh)

option(CODES_ENABLE_DIRECTOR_TESTS
       "Register Director workflow tests that require a running zmqmlserver.py"
       OFF)
# ---------------------------------------------------------------------------
# Unit-test smoke test. The GoogleTest framework (GTest::gtest / gtest_main) is
# built by the thirdparty dispatcher when BUILD_TESTING is on — see
# thirdparty/googletest/. This smoke test proves the vendored framework builds,
# links, runs, and reports through CTest. Real unit-test consumers land in
# a future PR. Unit tests run serially (no MPI), distinct from the mpiexec-launched
# model tests below.
add_executable(codes-unit-smoke codes-unit-smoke.cxx)
target_link_libraries(codes-unit-smoke PRIVATE GTest::gtest_main)
add_test(NAME codes-unit-smoke COMMAND codes-unit-smoke)
# ---------------------------------------------------------------------------
# MPI launch preflight. Fails loudly if mpiexec can't form a real multi-rank
# MPI_COMM_WORLD, guarding against a broken launcher (e.g. Ubuntu 24.04's mpich
# 4.2.0-5build3, whose Hydra starts every rank as a singleton) silently
# degrading the optimistic (--sync=3) model tests below into N independent
# *sequential* runs that still exit 0 and pass. Launched exactly like the other
# MPI tests (same MPIEXEC_* vars) at np=2; the binary returns nonzero unless
# MPI_Comm_size == 2, so a singleton launcher makes ctest fail here.
add_executable(mpi-multirank-check mpi-multirank-check.c)
target_link_libraries(mpi-multirank-check PRIVATE MPI::MPI_C)
add_test(NAME mpi-multirank-sanity
    COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 ${MPIEXEC_PREFLAGS}
            $<TARGET_FILE:mpi-multirank-check> 2 ${MPIEXEC_POSTFLAGS})
# ---------------------------------------------------------------------------

# codes_add_equivalence_test — register an equivalence/determinism test.
#
# Runs a model binary two or more times and asserts a marker line (default
# "Net Events Processed") is identical across runs. Replaces the copy-and-edit
# per-scenario shell scripts: adding a test is one call here, no new file.
#
#   codes_add_equivalence_test(
#       NAME     <ctest name>
#       BINARY   <CMake target>            # e.g. tutorial-synthetic-ping-pong
#       CONFIG   <path under build dir, or bare name generated by SETUP>
#       [NP      <ranks>]                   # default 3
#       [ARGS    <args shared by all runs>]
#       [REPEAT  <n>]                       # default 2; identical runs (reproducibility)
#       [VARIANTS "<extra args run 1>" "<extra args run 2>" ...]  # one run each, appended
#       [MARKER  <line to compare>]         # default "Net Events Processed"
#       [SETUP   <script under tests/>]      # sourced in each run dir (env + conf gen)
#       [REQUIRE <line that must appear in every run's output>]  # presence only
#   )
#
# With SETUP, CONFIG names the file the setup script generates in each run dir
# (referenced by bare name), not a build-dir path.
#
# REPEAT and VARIANTS are mutually exclusive ways to describe the runs:
# REPEAT for "same command N times", VARIANTS when only a small fragment differs
# (e.g. VARIANTS "--sync=1" "--sync=3" for a seq-vs-optimistic check).
function(codes_add_equivalence_test)
    cmake_parse_arguments(T "" "NAME;BINARY;NP;CONFIG;MARKER;REPEAT;SETUP" "ARGS;VARIANTS;REQUIRE" ${ARGN})

    if(NOT T_NAME OR NOT T_BINARY OR NOT T_CONFIG)
        message(FATAL_ERROR "codes_add_equivalence_test: NAME, BINARY and CONFIG are required")
    endif()
    if(NOT T_NP)
        set(T_NP 3)
    endif()
    if(NOT T_MARKER)
        set(T_MARKER "Net Events Processed")
    endif()
    if(NOT T_REPEAT)
        set(T_REPEAT 2)
    endif()

    set(_bin    "$<TARGET_FILE:${T_BINARY}>")
    # Without SETUP, CONFIG is a file under the build dir. With SETUP, the config
    # is generated by the setup script inside each run dir, so CONFIG is the bare
    # name it writes (resolved relative to the run dir).
    if(T_SETUP)
        set(_config "${T_CONFIG}")
    else()
        set(_config "${CODES_BINARY_DIR}/${T_CONFIG}")
    endif()
    set(_launch ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${T_NP} ${MPIEXEC_PREFLAGS})

    set(_cmd "")
    if(T_VARIANTS)
        foreach(_extra IN LISTS T_VARIANTS)
            separate_arguments(_extra_list UNIX_COMMAND "${_extra}")
            list(APPEND _cmd @@ ${_launch} "${_bin}" ${T_ARGS} ${_extra_list}
                             ${MPIEXEC_POSTFLAGS} -- "${_config}")
        endforeach()
    else()
        foreach(_i RANGE 1 ${T_REPEAT})
            list(APPEND _cmd @@ ${_launch} "${_bin}" ${T_ARGS}
                             ${MPIEXEC_POSTFLAGS} -- "${_config}")
        endforeach()
    endif()

    set(_setup "")
    if(T_SETUP)
        set(_setup --setup "${CMAKE_CURRENT_SOURCE_DIR}/${T_SETUP}")
    endif()
    set(_require "")
    foreach(_req IN LISTS T_REQUIRE)
        if(NOT _req STREQUAL "")
            list(APPEND _require --require "${_req}")
        endif()
    endforeach()

    add_test(NAME ${T_NAME}
        COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh"
                bash "${CMAKE_CURRENT_SOURCE_DIR}/equivalence-run.sh"
                --marker "${T_MARKER}" ${_require} ${_setup} ${_cmd}
        WORKING_DIRECTORY "${CODES_BINARY_DIR}")
endfunction()

# codes_add_run_test — register a single-run smoke / unit test.
#
# Runs a model or test binary once under MPI; the test passes on clean exit
# (run-test.sh additionally fails if the binary leaves an empty ross.csv). The
# caller supplies the full post-binary argument list, which absorbs the various
# ways CODES binaries take their config: positional, "-- <conf>",
# "--codes-config=<conf>", "--conf=<conf>", or none. Config files live in the
# source tree, so reference them as ${CMAKE_CURRENT_SOURCE_DIR}/... (tests/) or
# ${CMAKE_SOURCE_DIR}/... (elsewhere).
#
# With SETUP and/or MARKER the test runs through the staged runner instead:
# SETUP is sourced inside the run dir (env + config generation; reference the
# generated config by bare name in ARGS), and MARKER must appear in the output.
#
#   codes_add_run_test(
#       NAME   <ctest name>
#       BINARY <CMake target>
#       [NP    <ranks>]                 # default 1
#       [ARGS  <full args after the binary>]
#       [SETUP <script under tests/>]    # sourced in the run dir before the run
#       [MARKER <line that must appear in the output>]
#   )
function(codes_add_run_test)
    cmake_parse_arguments(T "" "NAME;BINARY;NP;SETUP;MARKER" "ARGS;REQUIRE" ${ARGN})
    if(NOT T_NAME OR NOT T_BINARY)
        message(FATAL_ERROR "codes_add_run_test: NAME and BINARY are required")
    endif()
    if(NOT T_NP)
        set(T_NP 1)
    endif()
    set(_run ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${T_NP} ${MPIEXEC_PREFLAGS}
             "$<TARGET_FILE:${T_BINARY}>" ${T_ARGS} ${MPIEXEC_POSTFLAGS})

    if(T_SETUP OR T_MARKER OR T_REQUIRE)
        # SETUP must be sourced and MARKER/REQUIRE checked -> go through the staged runner.
        set(_opts "")
        if(T_MARKER)
            list(APPEND _opts --marker "${T_MARKER}")
        endif()
        foreach(_req IN LISTS T_REQUIRE)
            if(NOT _req STREQUAL "")
                list(APPEND _opts --require "${_req}")
            endif()
        endforeach()
        if(T_SETUP)
            list(APPEND _opts --setup "${CMAKE_CURRENT_SOURCE_DIR}/${T_SETUP}")
        endif()
        add_test(NAME ${T_NAME}
            COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh"
                    bash "${CMAKE_CURRENT_SOURCE_DIR}/equivalence-run.sh"
                    ${_opts} @@ ${_run}
            WORKING_DIRECTORY "${CODES_BINARY_DIR}")
    else()
        add_test(NAME ${T_NAME}
            COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh" ${_run}
            WORKING_DIRECTORY "${CODES_BINARY_DIR}")
    endif()
endfunction()

# codes_add_lpio_equivalence_test — assert two configs produce equivalent results.
#
# Runs BINARY once per config (each with its own --lp-io-dir) and diffs the
# resulting per-LP lp-io output -- the set of identifier files, and a sorted diff
# of each. Two configs are equivalent iff every run produces identical lp-io. The
# primary use is checking a new YAML config against the legacy .conf it replaces;
# CONFIG_A/CONFIG_B can be any two config files the model accepts (format-agnostic,
# so it works with .conf-vs-.conf today and .conf-vs-.yaml once the YAML adapter
# lands). BINARY must be a model that emits lp-io (e.g. model-net-synthetic).
#
#   codes_add_lpio_equivalence_test(
#       NAME     <ctest name>
#       BINARY   <CMake target>
#       CONFIG_A <path>                  # e.g. legacy .conf
#       CONFIG_B <path>                  # e.g. new .yaml (or a second .conf)
#       [NP      <ranks>]                # default 1
#       [ARGS    <args shared by both runs, placed before the config>]
#   )
function(codes_add_lpio_equivalence_test)
    cmake_parse_arguments(T "" "NAME;BINARY;NP;CONFIG_A;CONFIG_B" "ARGS" ${ARGN})
    if(NOT T_NAME OR NOT T_BINARY OR NOT T_CONFIG_A OR NOT T_CONFIG_B)
        message(FATAL_ERROR "codes_add_lpio_equivalence_test: NAME, BINARY, CONFIG_A and CONFIG_B are required")
    endif()
    if(NOT T_NP)
        set(T_NP 1)
    endif()
    set(_bin    "$<TARGET_FILE:${T_BINARY}>")
    set(_launch ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${T_NP} ${MPIEXEC_PREFLAGS})
    # Each run writes lp-io into a fresh "lp-io" dir inside its own run-N subdir
    # (lp_io_prepare mkdir's it and aborts if it already exists, so it must be
    # relative + per-run-isolated, which the runner's subdirs provide).
    add_test(NAME ${T_NAME}
        COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh"
                bash "${CMAKE_CURRENT_SOURCE_DIR}/equivalence-run.sh"
                --marker "Net Events Processed" --lp-io lp-io
                @@ ${_launch} "${_bin}" ${T_ARGS} --lp-io-dir=lp-io ${MPIEXEC_POSTFLAGS} -- "${T_CONFIG_A}"
                @@ ${_launch} "${_bin}" ${T_ARGS} --lp-io-dir=lp-io ${MPIEXEC_POSTFLAGS} -- "${T_CONFIG_B}"
        WORKING_DIRECTORY "${CODES_BINARY_DIR}")
endfunction()

# Unfortunatelly, CMake doesn't support iteration of a key-pair structure,
# otherwise the following lists could be easily compressed into a single
# list/dictionary/structure. Instead each C file name **MUST** match each
# binary file name. This would be handled differently if maintaining the
# autoconfig build was not a **MUST** (in which case, the name of the file and
# its binary should match, leaving us with a single list!)
set(test-c-files
    lp-io-test.c
    mapping_test.c
    jobmap-test.c
    map-ctx-test.c
    modelnet-prio-sched-test.c
    modelnet-test-dragonfly.c
    modelnet-test.c
    resource-test.c
    rc-stack-test.c
    modelnet-p2p-bw.c
    modelnet-simplep2p-test.c
    local-storage-model-test.c
    )

set(test-bin-names
    lp-io-test
    mapping_test
    jobmap-test
    map-ctx-test
    modelnet-prio-sched-test
    modelnet-test-dragonfly
    modelnet-test
    resource-test
    rc-stack-test
    modelnet-p2p-bw
    modelnet-simplep2p-test
    lsm-test
    )

foreach(testname cfile IN ZIP_LISTS test-bin-names test-c-files)
    add_executable(${testname} ${cfile})
    target_link_libraries(${testname} PUBLIC codes)
endforeach()

# Additional binary which is not self contained
add_executable(codes-workload-test
    workload/codes-workload-test.c
    workload/codes-workload-test-svr-lp.c
    workload/codes-workload-test-cn-lp.c
    )
target_link_libraries(codes-workload-test PUBLIC codes)

# Tests are also not consistent with the files to compile, but
# that's ok, there are more tests than binary files
# Scripts still run as per-scenario shell files. Most single-run tests were
# migrated to codes_add_run_test() and the simple determinism test to
# codes_add_equivalence_test() (both below). What remains here either has
# custom logic, is held back for review, or is migrated in a later chunk.
set(test-shell-files
    # mapping_test diffs binary output against tests/expected/mapping_test.out
    mapping_test.sh
    # surrogate-1/2/3 are cross-config comparison tests (surrogate vs high-fidelity,
    # freeze vs non-freeze) with custom sed-normalized diffs of per-LP *stdout* --
    # not determinism tests -- so they stay as scripts (same bucket as mapping_test).
    # TODO: convert these to codes_add_lpio_equivalence_test (the canonical per-LP
    # comparison; stdout scraping is the approach it replaces) once the surrogate
    # path emits lp-io output.
    example-ping-pong-surrogate-1.sh
    example-ping-pong-surrogate-2.sh
    example-ping-pong-surrogate-3.sh
    )

configure_file(conf/union-milc-jacobi-workload/dfdally-72-par.conf.in conf/union-milc-jacobi-workload/dfdally-72-par.conf.in @ONLY)

if(USE_UNION)
    set(union-shell-files
        union-workload-test-surrogate.sh
        union-workload-test-surrogate-smaller-chunk-size.sh
        union-workload-test-surrogate-parallel.sh
        union-workload-test-surrogate-parallel-deterministic-1.sh
        union-workload-test-surrogate-parallel-deterministic-2.sh
        union-workload-test-surrogate-parallel-deterministic-3.sh
        union-workload-test-surrogate-parallel-deterministic-4.sh
    )
    list(APPEND test-shell-files ${union-shell-files})
endif()

if(USE_ZEROMQ AND CODES_ENABLE_DIRECTOR_TESTS)
    set(director-shell-files
        zmqml-iteration-time-hybrid-workflow.sh
        zmqml-event-time-hybrid-workflow.sh
        zmqml-fluid-flow-wan-hybrid-workflow.sh
    )
    list(APPEND test-shell-files ${director-shell-files})
endif()

foreach(testname ${test-shell-files})
    add_test(NAME ${testname}
        COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh" "${CMAKE_CURRENT_SOURCE_DIR}/${testname}"
        WORKING_DIRECTORY "${CODES_BINARY_DIR}")
endforeach()

if(USE_ZEROMQ AND CODES_ENABLE_DIRECTOR_TESTS)
    # These tests share one stateful ZeroMQ server, so they must not overlap.
    # The label exposes them as one Director test family to CTest and CI.
    set_tests_properties(${director-shell-files} PROPERTIES
        LABELS "director"
        RUN_SERIAL TRUE
        TIMEOUT 1200)
endif()

# The union-surrogate tests run a heavy MILC+Jacobi UNION workload -- ~30 min for
# the set. Label them "nightly" so PR/push CI skips them (ctest --label-exclude
# nightly) and they run only on the scheduled nightly full-lane build, and give
# each a generous timeout so a hang can't wedge that job.
if(USE_UNION)
    set_tests_properties(${union-shell-files} PROPERTIES LABELS "nightly" TIMEOUT 1200)
endif()


# Fluid-flow WAN smoke tests.
#
# These tests start from the CMake-generated doc/example/fluid-flow-wan.conf,
# rewrite only the scheduler and output paths in an isolated test directory,
# and verify that the model runs cleanly and writes CSV logs.
foreach(_ffw_sched fifo round_robin)
    foreach(_ffw_mode sequential optimistic)
        if(_ffw_mode STREQUAL "sequential")
            set(_ffw_synch 1)
            set(_ffw_np 1)
        else()
            set(_ffw_synch 3)
            set(_ffw_np 2)
        endif()

        set(_ffw_test "fluid-flow-wan-${_ffw_sched}-${_ffw_mode}")

        add_test(NAME ${_ffw_test}
            COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run-test.sh"
                    "${CMAKE_CURRENT_SOURCE_DIR}/fluid-flow-wan-ci.sh"
                    "${_ffw_sched}"
                    "${_ffw_synch}"
                    "${_ffw_np}"
                    "${_ffw_test}"
                    "${MPIEXEC_EXECUTABLE}"
                    "${MPIEXEC_NUMPROC_FLAG}"
            WORKING_DIRECTORY "${CODES_BINARY_DIR}")

        set_tests_properties(${_ffw_test} PROPERTIES TIMEOUT 120)
    endforeach()
endforeach()

# Equivalence / determinism tests (replacing per-scenario shell scripts).
# example-ping-pong-determinism.sh: run the optimistic sim twice, compare
# committed-event counts (reproducibility).
codes_add_equivalence_test(
    NAME   example-ping-pong-determinism
    BINARY tutorial-synthetic-ping-pong
    NP      3
    ARGS    --sync=3 --num_messages=10 --payload_sz=8192
    CONFIG  doc/example/tutorial-ping-pong.conf
    REQUIRE "START PARALLEL OPTIMISTIC SIMULATION")

# Surrogate-mode determinism: same surrogate config run twice (np 3, sync=3),
# committed-event counts must match. The two variants differ only in network
# treatment. REQUIRE asserts the surrogate actually switched.
codes_add_equivalence_test(
    NAME    example-ping-pong-surrogate-determinism-no-freeze
    BINARY  tutorial-synthetic-ping-pong
    NP      3
    ARGS    --sync=3 --num_messages=100 --payload_sz=8192
    CONFIG  tutorial-ping-pong-surrogate.conf
    SETUP   surrogate-determinism-no-freeze-setup.sh
    REQUIRE "Network switch completed" "START PARALLEL OPTIMISTIC SIMULATION")
codes_add_equivalence_test(
    NAME    example-ping-pong-surrogate-determinism-freeze
    BINARY  tutorial-synthetic-ping-pong
    NP      3
    ARGS    --sync=3 --num_messages=100 --payload_sz=8192
    CONFIG  tutorial-ping-pong-surrogate.conf
    SETUP   surrogate-determinism-freeze-setup.sh
    REQUIRE "Network switch completed" "START PARALLEL OPTIMISTIC SIMULATION")

# Smoke test: the sim runs cleanly with an empty packet-latency trace path.
# Single run (SETUP generates the config; MARKER asserts it produced output).
codes_add_run_test(
    NAME   example-ping-pong-no-logging
    BINARY tutorial-synthetic-ping-pong
    NP     1
    ARGS   --sync=1 --num_messages=10 --payload_sz=4096 -- tutorial-ping-pong.conf
    SETUP  no-logging-setup.sh
    MARKER "Net Events Processed")

# Single-run smoke / unit tests (migrated from per-scenario shell scripts).
# Config files live in the source tree; _tconf/_nwconf point at the two homes.
set(_tconf "${CMAKE_CURRENT_SOURCE_DIR}/conf")
set(_nwconf "${CMAKE_SOURCE_DIR}/src/network-workloads/conf")

codes_add_run_test(NAME lp-io-test    BINARY lp-io-test    ARGS --sync=1)
# rc-stack-test is a serial unit test (no config, no args); the old script ran
# the wrong binary (modelnet-simplep2p-test) -- a copy-paste error, fixed here.
codes_add_run_test(NAME rc-stack-test BINARY rc-stack-test)
# modelnet-prio-sched ran both schedulers in one script; split into two tests.
codes_add_run_test(NAME modelnet-prio-sched-test-seq BINARY modelnet-prio-sched-test
    NP 1 ARGS --sync=1 -- "${_tconf}/modelnet-prio-sched-test.conf")
codes_add_run_test(NAME modelnet-prio-sched-test-opt BINARY modelnet-prio-sched-test
    NP 2 ARGS --sync=3 -- "${_tconf}/modelnet-prio-sched-test.conf"
    REQUIRE "START PARALLEL OPTIMISTIC SIMULATION")
codes_add_run_test(NAME jobmap-test   BINARY jobmap-test   ARGS "${_tconf}/jobmap-test-list.conf")
codes_add_run_test(NAME map-ctx-test  BINARY map-ctx-test  ARGS "${_tconf}/map-ctx-test.conf")
codes_add_run_test(NAME resource-test BINARY resource-test ARGS --sync=1 "--codes-config=${_tconf}/buffer_test.conf")
codes_add_run_test(NAME lsm-test      BINARY lsm-test      ARGS --sync=1 "--conf=${_tconf}/lsm-test.conf")
codes_add_run_test(NAME modelnet-simplep2p-test BINARY modelnet-simplep2p-test
    ARGS --sync=1 -- "${_tconf}/modelnet-test-simplep2p.conf")
codes_add_run_test(NAME modelnet-p2p-bw-loggp BINARY modelnet-p2p-bw
    ARGS --sync=1 -- "${_tconf}/modelnet-p2p-bw-loggp.conf")
codes_add_run_test(NAME codes-workload-test BINARY codes-workload-test
    ARGS --sync=1 "${CMAKE_CURRENT_SOURCE_DIR}/workload/codes-workload-test.conf")

# modelnet-test binary exercised against one config per topology.
codes_add_run_test(NAME modelnet-test           BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test.conf")
codes_add_run_test(NAME modelnet-test-dragonfly BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test-dragonfly.conf")
codes_add_run_test(NAME modelnet-test-torus     BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test-torus.conf")
codes_add_run_test(NAME modelnet-test-em        BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test-em.conf")
codes_add_run_test(NAME modelnet-test-loggp     BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test-loggp.conf")
codes_add_run_test(NAME modelnet-test-slimfly   BINARY modelnet-test ARGS --sync=1 -- "${_tconf}/modelnet-test-slimfly.conf")

# Synthetic-traffic binaries.
codes_add_run_test(NAME modelnet-test-dragonfly-synthetic BINARY model-net-synthetic
    ARGS --sync=1 --num_messages=1 -- "${_nwconf}/modelnet-synthetic-dragonfly.conf")
codes_add_run_test(NAME modelnet-test-fattree-synthetic BINARY model-net-synthetic-fattree
    ARGS --sync=1 -- "${_nwconf}/modelnet-synthetic-fattree.conf")
codes_add_run_test(NAME modelnet-test-slimfly-synthetic BINARY model-net-synthetic-slimfly
    ARGS --sync=1 -- "${_nwconf}/modelnet-synthetic-slimfly-min.conf")

# Config-equivalence harness: run two configs, diff per-LP lp-io output.
# Proof-of-concept uses the same config twice (must be identical -> also an lp-io
# determinism check). When the YAML config adapter lands, CONFIG_B becomes the
# compiled .yaml, giving the old-.conf vs new-.yaml equivalence check.
codes_add_lpio_equivalence_test(
    NAME     synthetic-dragonfly-lpio-equivalence
    BINARY   model-net-synthetic
    NP       1
    ARGS     --sync=1 --num_messages=1
    CONFIG_A "${_nwconf}/modelnet-synthetic-dragonfly.conf"
    CONFIG_B "${_nwconf}/modelnet-synthetic-dragonfly.conf")
